wier/force-app/main/default/objects/Other_Contacts__c/Other_Contacts__c.object-meta.xml
<CustomObject>
    <label>Other Contacts</label>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Contacts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>