wier/force-app/main/default/objects/Other_Contacts__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>Additional Information</description>
    <label>Additional Information</label>
    <type>TextArea</type>
</CustomField>