wier/force-app/main/default/objects/Other_Contacts__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>First Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>